<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="weather"
            type="com.example.feature.model.WeatherUiModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_generic"
            android:layout_marginEnd="@dimen/spacing_generic"
            android:layout_marginTop="@dimen/spacing_xlarge"
            app:cardBackgroundColor="@color/white_opacity"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">


                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/temperatuer"
                        android:textSize="18sp"
                        tools:text="temperatuer : " />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_weather_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{weather.temp}"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        tools:text="@tools:sample/lorem" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">


                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/date"
                        android:textSize="18sp"
                        tools:text="Date : " />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_weather_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{weather.date}"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        tools:text="@tools:sample/lorem" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <Button
                    android:id="@+id/tv_see_more"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/more"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:background="@drawable/shape_rect_round_cnr_white_bg_gray_border_1dp"
                    android:backgroundTint="@color/cnr_color"
                    app:cornerRadius="@dimen/spacing_generic"
                    android:layout_gravity="center"
                    tools:text="see more" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:adjustViewBounds="true"
            android:translationZ="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/spacing_large"
            android:id="@+id/img_icon"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>